// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange reducer should handle SOURCE_CURRENCY_CHANGE 1`] = `
Object {
  "sourceCurrency": "EUR",
  "targetCurrency": "EUR",
}
`;

exports[`Exchange reducer should handle TARGET_CURRENCY_CHANGE 1`] = `
Object {
  "sourceCurrency": "RUB",
  "targetCurrency": "USD",
}
`;

exports[`Exchange reducer should return the initial state 1`] = `
Object {
  "sourceCurrency": "RUB",
  "targetCurrency": "EUR",
}
`;
